--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="og:url" content="https://loona2jin.github.io/greenHJ">
         <meta name="og:title" content="コナコナジャンプ">
         <meta name="og:description" content="コナジャンプ">
-        <meta name="og:image" content="https://waveonearth.github.io/konajump/title_.jpg">
+        <meta name="og:image" content="https://github.com/waveonearth/konajump/blob/master/title_.jpg?raw=true">
         <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
         <link rel="icon" type="image/png" href="android-icon-192x192.png">
         <link rel="icon" type="image/png" href="favicon-96x96.png">
