--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
         <title>KONA JUMP</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="twitter:card" content="summary">
+    	<meta name="twitter:card" content="summary">
         <meta name="og:title" content="コナコナジャンプ">
-        <meta name="og:description" content="コナジャンプ">
+        <meta name="og:image" content="https://raw.githubusercontent.com/waveonearth/konajump/master/title_.jpg">
+        <meta name="og:description" content="飛んでみて!">
         <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
         <link rel="icon" type="image/png" href="android-icon-192x192.png">
         <link rel="icon" type="image/png" href="favicon-96x96.png">
